Windows solution now builds
Whoever wrote Windows.h surely made his best to kill crosscompatibility. Save me from this hell

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,10 +3,6 @@ image: Visual Studio 2015
 clone_folder: c:\projects\spectre-light
 platform: x64
 configuration: Release
-before_build:
-    - md c:\projects\spectre-light\build
-    - cd c:\projects\spectre-light\build
-    - cmake -G "Visual Studio 14 2015 Win64" ..
 build:
-    project: c:\projects\spectre-light\build\spectre-light.sln
+    project: c:\projects\spectre-light\spectre-light.sln
     parallel: true
