--- a/visualstudio/tests.vcxproj
+++ b/visualstudio/tests.vcxproj
@@ -77,6 +77,7 @@
       <PreprocessorDefinitions>_DEBUG;DEBUG;__VS__;TESTS;TEST_ASSETS="$(SolutionDir.Replace('\', '\\'))..\\tests\\assets";%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
       <CallingConvention>VectorCall</CallingConvention>
+      <InlineFunctionExpansion>Disabled</InlineFunctionExpansion>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -84,10 +85,32 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\geometry\AABB.cpp" />
+    <ClCompile Include="..\src\geometry\matrix4.cpp" />
+    <ClCompile Include="..\src\geometry\point2.cpp" />
+    <ClCompile Include="..\src\geometry\point3.cpp" />
+    <ClCompile Include="..\src\geometry\ray.cpp" />
+    <ClCompile Include="..\src\geometry\vec2.cpp" />
+    <ClCompile Include="..\src\geometry\vec3.cpp" />
     <ClCompile Include="..\src\utility\console.cpp" />
+    <ClCompile Include="..\tests\unit-testing\aabb_tests.cpp" />
     <ClCompile Include="..\tests\unit-testing\console_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\matrix4_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\normal_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\point2_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\point3_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\ray_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\vec2_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\vec3_tests.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\geometry\AABB.hpp" />
+    <ClInclude Include="..\src\geometry\matrix4.hpp" />
+    <ClInclude Include="..\src\geometry\point2.hpp" />
+    <ClInclude Include="..\src\geometry\point3.hpp" />
+    <ClInclude Include="..\src\geometry\ray.hpp" />
+    <ClInclude Include="..\src\geometry\vec2.hpp" />
+    <ClInclude Include="..\src\geometry\vec3.hpp" />
     <ClInclude Include="..\src\utility\console.hpp" />
     <ClInclude Include="..\tests\unit-testing\spectre_tests.h" />
   </ItemGroup>
