--- a/visualstudio/tests.vcxproj
+++ b/visualstudio/tests.vcxproj
@@ -85,6 +85,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\accelerators\bvh.cpp" />
+    <ClCompile Include="..\src\accelerators\kdtree.cpp" />
     <ClCompile Include="..\src\geometry\AABB.cpp" />
     <ClCompile Include="..\src\geometry\matrix4.cpp" />
     <ClCompile Include="..\src\geometry\point2.cpp" />
@@ -92,18 +94,66 @@
     <ClCompile Include="..\src\geometry\ray.cpp" />
     <ClCompile Include="..\src\geometry\vec2.cpp" />
     <ClCompile Include="..\src\geometry\vec3.cpp" />
+    <ClCompile Include="..\src\lights\area_light.cpp" />
+    <ClCompile Include="..\src\materials\bdf.cpp" />
+    <ClCompile Include="..\src\materials\fresnel_conditions.cpp" />
+    <ClCompile Include="..\src\materials\lambertian.cpp" />
+    <ClCompile Include="..\src\materials\material_library.cpp" />
+    <ClCompile Include="..\src\materials\microfacet.cpp" />
+    <ClCompile Include="..\src\materials\microfacet_distributions.cpp" />
+    <ClCompile Include="..\src\materials\oren_nayar.cpp" />
+    <ClCompile Include="..\src\materials\reflection.cpp" />
+    <ClCompile Include="..\src\materials\refraction.cpp" />
+    <ClCompile Include="..\src\primitives\asset.cpp" />
+    <ClCompile Include="..\src\primitives\box.cpp" />
+    <ClCompile Include="..\src\primitives\mesh.cpp" />
+    <ClCompile Include="..\src\primitives\shape.cpp" />
+    <ClCompile Include="..\src\primitives\sphere.cpp" />
+    <ClCompile Include="..\src\primitives\triangle.cpp" />
+    <ClCompile Include="..\src\samplers\filter_box.cpp" />
+    <ClCompile Include="..\src\samplers\filter_gaussian.cpp" />
+    <ClCompile Include="..\src\samplers\filter_lanczos.cpp" />
+    <ClCompile Include="..\src\samplers\filter_mitchell.cpp" />
+    <ClCompile Include="..\src\samplers\filter_tent.cpp" />
+    <ClCompile Include="..\src\samplers\sampler.cpp" />
+    <ClCompile Include="..\src\samplers\sampler_random.cpp" />
+    <ClCompile Include="..\src\samplers\sampler_stratified.cpp" />
+    <ClCompile Include="..\src\textures\texture.cpp" />
+    <ClCompile Include="..\src\textures\texture_library.cpp" />
+    <ClCompile Include="..\src\textures\uniform.cpp" />
+    <ClCompile Include="..\src\utility\color.cpp" />
     <ClCompile Include="..\src\utility\console.cpp" />
+    <ClCompile Include="..\src\utility\imageIO.cpp" />
+    <ClCompile Include="..\src\utility\occlusion_tester.cpp" />
+    <ClCompile Include="..\src\utility\scene.cpp" />
+    <ClCompile Include="..\src\utility\spectrum.cpp" />
+    <ClCompile Include="..\src\utility\utility.cpp" />
+    <ClCompile Include="..\src\utility\wellrng.cpp" />
     <ClCompile Include="..\tests\unit-testing\aabb_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\asset_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\box_tests.cpp" />
     <ClCompile Include="..\tests\unit-testing\console_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\filter_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\light_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\materiallibrary_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\materials_tests.cpp" />
     <ClCompile Include="..\tests\unit-testing\matrix4_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\mesh_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\microfacets_tests.cpp" />
     <ClCompile Include="..\tests\unit-testing\normal_tests.cpp" />
     <ClCompile Include="..\tests\unit-testing\point2_tests.cpp" />
     <ClCompile Include="..\tests\unit-testing\point3_tests.cpp" />
     <ClCompile Include="..\tests\unit-testing\ray_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\sampler_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\sphere_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\texturelibrary_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\triangle_tests.cpp" />
     <ClCompile Include="..\tests\unit-testing\vec2_tests.cpp" />
     <ClCompile Include="..\tests\unit-testing\vec3_tests.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\accelerators\bvh.hpp" />
+    <ClInclude Include="..\src\accelerators\kdtree.hpp" />
     <ClInclude Include="..\src\geometry\AABB.hpp" />
     <ClInclude Include="..\src\geometry\matrix4.hpp" />
     <ClInclude Include="..\src\geometry\point2.hpp" />
@@ -111,7 +161,43 @@
     <ClInclude Include="..\src\geometry\ray.hpp" />
     <ClInclude Include="..\src\geometry\vec2.hpp" />
     <ClInclude Include="..\src\geometry\vec3.hpp" />
+    <ClInclude Include="..\src\lights\area_light.hpp" />
+    <ClInclude Include="..\src\materials\bdf.hpp" />
+    <ClInclude Include="..\src\materials\fresnel_conditions.hpp" />
+    <ClInclude Include="..\src\materials\lambertian.hpp" />
+    <ClInclude Include="..\src\materials\material_library.hpp" />
+    <ClInclude Include="..\src\materials\metals.hpp" />
+    <ClInclude Include="..\src\materials\microfacet.hpp" />
+    <ClInclude Include="..\src\materials\microfacet_distributions.hpp" />
+    <ClInclude Include="..\src\materials\oren_nayar.hpp" />
+    <ClInclude Include="..\src\materials\reflection.hpp" />
+    <ClInclude Include="..\src\materials\refraction.hpp" />
+    <ClInclude Include="..\src\primitives\asset.hpp" />
+    <ClInclude Include="..\src\primitives\box.hpp" />
+    <ClInclude Include="..\src\primitives\mesh.hpp" />
+    <ClInclude Include="..\src\primitives\shape.hpp" />
+    <ClInclude Include="..\src\primitives\sphere.hpp" />
+    <ClInclude Include="..\src\primitives\triangle.hpp" />
+    <ClInclude Include="..\src\samplers\filter.hpp" />
+    <ClInclude Include="..\src\samplers\filter_box.hpp" />
+    <ClInclude Include="..\src\samplers\filter_gaussian.hpp" />
+    <ClInclude Include="..\src\samplers\filter_lanczos.hpp" />
+    <ClInclude Include="..\src\samplers\filter_mitchell.hpp" />
+    <ClInclude Include="..\src\samplers\filter_tent.hpp" />
+    <ClInclude Include="..\src\samplers\sampler.hpp" />
+    <ClInclude Include="..\src\samplers\sampler_random.hpp" />
+    <ClInclude Include="..\src\samplers\sampler_stratified.hpp" />
+    <ClInclude Include="..\src\textures\texture.hpp" />
+    <ClInclude Include="..\src\textures\texture_library.hpp" />
+    <ClInclude Include="..\src\textures\uniform.hpp" />
+    <ClInclude Include="..\src\utility\color.hpp" />
     <ClInclude Include="..\src\utility\console.hpp" />
+    <ClInclude Include="..\src\utility\imageIO.hpp" />
+    <ClInclude Include="..\src\utility\occlusion_tester.hpp" />
+    <ClInclude Include="..\src\utility\scene.hpp" />
+    <ClInclude Include="..\src\utility\spectrum.hpp" />
+    <ClInclude Include="..\src\utility\utility.hpp" />
+    <ClInclude Include="..\src\utility\wellrng.hpp" />
     <ClInclude Include="..\tests\unit-testing\spectre_tests.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
