File testing on windows
Cross-platform filesystem class completed!

--- a/visualstudio/tests.vcxproj
+++ b/visualstudio/tests.vcxproj
@@ -74,7 +74,7 @@
       <WarningLevel>TurnOffAllWarnings</WarningLevel>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;$(SolutionDir)..\tests\unit-testing;$(SolutionDir)..\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>_DEBUG;DEBUG;__VS__;TESTS;TEST_ASSETS="$(SolutionDir.Replace('\', '\\'))..\\tests\\assets";%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;DEBUG;__VS__;TESTS;TEST_ASSETS="$(SolutionDir.Replace('\', '\\'))..\\tests\\assets\\";%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
       <CallingConvention>VectorCall</CallingConvention>
       <InlineFunctionExpansion>Disabled</InlineFunctionExpansion>
